--- a/src/simplebot/templates/help.j2
+++ b/src/simplebot/templates/help.j2
@@ -16,13 +16,18 @@
 		<h2>➡️ Commands</h2>
 	    </header>
 	    <div class="w3-container">
+		<br>
 		{% for c in cmds %}
+		    {% if not loop.index == 1 %}
+			<hr/>
+		    {% endif %}
 		    <a href="mailto:{{ addr }}?body={{ c.cmd }}">{{ c.cmd }}</a> {{ c.short }}
 		    <br>
-		    {% for line in c.long.split("\n") %}
-			{{ line }}<br>
-		    {% endfor %}
-		    <hr/>
+		    {% if c.long %}
+			{% for line in c.long.split("\n") %}
+			    {{ line }}<br>
+			{% endfor %}
+		    {% endif %}
 		{% endfor %}
 	    </div>
 	</div>
