--- a/src/simplebot/templates/help.j2
+++ b/src/simplebot/templates/help.j2
@@ -22,7 +22,7 @@
 			    {% if loop.index != 1 %}
 				<hr/>
 			    {% endif %}
-			    {{ f.short }}
+			    {% if f.admin %}(🛡️) {% endif %}{{ f.short }}
 			    <br>
 			    {% if f.long %}
 				{% for line in f.long.split("\n") %}
@@ -46,7 +46,7 @@
 			    {% if loop.index != 1 %}
 				<hr/>
 			    {% endif %}
-			    <a href="mailto:{{ addr }}?body={{ c.cmd }}">{{ c.cmd }}</a> {{ c.short }}
+			    {% if c.admin %}(🛡️) {% endif %}<a href="mailto:{{ addr }}?body={{ c.cmd }}">{{ c.cmd }}</a> {{ c.short }}
 			    <br>
 			    {% if c.long %}
 				{% for line in c.long.split("\n") %}
